Add dropdown menu in admin page for choise area and category

--- a/E_Advertisement/app/src/main/res/values/strings.xml
+++ b/E_Advertisement/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="descriptionPhoto">TODO</string>
     <string name="title_activity_main_screen">Main_screen</string>
     <string name="lorem_ip">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc magna tortor, pharetra vitae eros at, pulvinar volutpat diam. Cras tristique quam ut mattis dictum. Nulla maximus odio purus, sed convallis massa volutpat a.</string>
+    <string name="Category">Категорія</string>
 </resources>
