--- a/E_Advertisement/app/src/main/res/values/strings.xml
+++ b/E_Advertisement/app/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
     <string name="gaz">Gaz</string>
     <string name="voda">Voda</string>
     <string name="elektruka">Elektruka</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
