--- a/E_Advertisement/app/src/main/res/values/strings.xml
+++ b/E_Advertisement/app/src/main/res/values/strings.xml
@@ -17,5 +17,8 @@
 
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment1">Fragment 1</string>
+    <string name="hello_blank_fragment2">Fragment 2</string>
+    <string name="hello_blank_fragment3">Fragment 3</string>
+    <string name="hello_blank_fragment4">Fragment 4</string>
 </resources>
