--- a/E_Advertisement/app/src/main/res/values/strings.xml
+++ b/E_Advertisement/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="hello_blank_fragment2">Fragment 2</string>
     <string name="hello_blank_fragment3">Fragment 3</string>
     <string name="hello_blank_fragment4">Fragment 4</string>
+    <string name="headerTextAdmin">Заголовок</string>
 </resources>
