--- a/E_Advertisement/app/src/main/res/values/strings.xml
+++ b/E_Advertisement/app/src/main/res/values/strings.xml
@@ -73,7 +73,6 @@
     <string name="loading">Loading…</string>
     <string name="custom_token">Custom Token</string>
     <string name="signed_in">Signed In</string>
-    <string name="signed_out"></string>
     <string name="token_null">Token: null</string>
     <string name="hint_email">Email</string>
     <string name="hint_password">Password</string>
@@ -115,4 +114,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="signed_out" />
 </resources>
